# bwinf41

./: CMakeLists.txt  README.md
LennartProtte/: Allgemeines.tex  Aufgabe1-Dokumentation.tex  Aufgabe2-Dokumentation.tex
LennartProtte/Aufgabe1-Dokumentation/: Aufgabe1-Dokumentation.aux  Aufgabe1-Dokumentation.tex
LennartProtte/Aufgabe1-Implementierung/: main  main.cpp  main.h  run.sh  structs.h
LennartProtte/Aufgabe1-Implementierung/Ausführbares Programm/: main
LennartProtte/Aufgabe1-Implementierung/Ausgabedateien/: backtracking.txt  circle.txt  circlepath.txt  gerade.txt  kreis.txt  nicht_loesbar.txt  rechteck.txt  simplegraph.txt  simplegraph2.txt  test.txt  viereck.txt  wenigerkrumm1.txt  wenigerkrumm2.txt  wenigerkrumm3.txt  wenigerkrumm4.txt  wenigerkrumm5.txt  wenigerkrumm6.txt  wenigerkrumm7.txt
LennartProtte/Aufgabe1-Implementierung/Eingabedateien/: backtracking.txt  gerade.txt  nicht_loesbar.txt  simplegraph.txt  viereck.txt  wenigerkrumm5.txt
LennartProtte/Aufgabe1-Implementierung/TestInput/: circlepath.txt
LennartProtte/Aufgabe1-Implementierung/TestOutput/: simplegraph.txt
LennartProtte/Aufgabe1-Implementierung/eigene_Ausgabedateien/: gerade.txt  kreis.txt  nicht_loesbar.txt  viereck.txt
LennartProtte/Aufgabe2-Dokumentation/: Aufgabe2-Dokumentation.aux  Aufgabe2-Dokumentation.tex
LennartProtte/Aufgabe2-Implementierung/: main  main.cpp  main.h  main_a.cpp  main_b.cpp  run.sh  runProfile.sh
images/: ImagesCube.tex  ImagesCubeSmall.tex  ImagesCubes.tex  ImagesGraph.tex  ImagesTask1.tex  ImagesTriangle.tex  run.sh
(+33 files in other folders)
